[gd_scene load_steps=20 format=2]

[ext_resource path="res://levels/Level5_1.tmx" type="PackedScene" id=1]
[ext_resource path="res://levels/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/LevelSetup.gd" type="Script" id=3]
[ext_resource path="res://items/Sconce.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/Fleaman.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/Skeleton.tscn" type="PackedScene" id=6]
[ext_resource path="res://items/OneUp.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/Level5Block.tres" type="Texture" id=8]
[ext_resource path="res://items/HiddenTreasure.tscn" type="PackedScene" id=9]
[ext_resource path="res://levels/Level5_1.gd" type="Script" id=10]
[ext_resource path="res://Teleport.tscn" type="PackedScene" id=11]
[ext_resource path="res://levels/Destructible.tscn" type="PackedScene" id=12]
[ext_resource path="res://enemies/RedSkeleton.tscn" type="PackedScene" id=13]
[ext_resource path="res://levels/Level5_2.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 245.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 101.75 )

[sub_resource type="CircleShape2D" id=3]
radius = 146.123

[sub_resource type="CircleShape2D" id=4]
radius = 202.988

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3, 16 )

[node name="Level5_1" type="Node2D"]
script = ExtResource( 10 )

[node name="LevelSetup" type="Node" parent="."]
script = ExtResource( 3 )
music = "res://music/06 Heart of Fire.mp3"
stage = 13
timeLimit = 500

[node name="Level5_1" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -256 )

[node name="Sconces" type="Node2D" parent="Level5_1"]
position = Vector2( -40, -7 )

[node name="Sconce" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 72, 359 )

[node name="Sconce2" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 327, 359 )

[node name="Sconce3" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 392, 359 )
drop = "holywater"

[node name="Sconce4" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 519, 294 )

[node name="Sconce5" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 458, 294 )

[node name="Sconce7" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 265, 294 )

[node name="Sconce8" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 135, 294 )

[node name="Sconce9" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 72, 103 )

[node name="Sconce10" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 200, 103 )

[node name="Sconce11" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 327, 103 )

[node name="Sconce12" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 136, 39 )

[node name="Sconce13" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 264, 39 )

[node name="Sconce14" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 392, 39 )

[node name="Sconce15" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 457, 106 )
drop = "blue$400"

[node name="Sconce18" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 652, 106 )

[node name="Sconce20" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 907, 106 )

[node name="Sconce25" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 1160, 106 )

[node name="Sconce26" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 1253, 108 )

[node name="Sconce21" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 970, 106 )

[node name="Sconce19" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 713, 106 )

[node name="Sconce16" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 584, 39 )

[node name="Sconce17" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 776, 39 )

[node name="Sconce22" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 840, 39 )

[node name="Sconce23" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 1032, 39 )

[node name="Sconce24" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 1095, 39 )

[node name="Sconce6" parent="Level5_1/Sconces" instance=ExtResource( 4 )]
position = Vector2( 203, 391 )

[node name="OutsideBorder" type="StaticBody2D" parent="Level5_1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level5_1/OutsideBorder"]
position = Vector2( -10, 168.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Level5_1/OutsideBorder"]
position = Vector2( 522, 312.75 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Level5_1/OutsideBorder"]
position = Vector2( 426, -102 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Level5_1/OutsideBorder"]
position = Vector2( 1258, -102 )
shape = SubResource( 2 )

[node name="Door" parent="Level5_1" instance=ExtResource( 2 )]
position = Vector2( 1280, 120 )
nextLevel = ExtResource( 14 )
nextLevelPosition = Vector2( 1280, -256 )

[node name="Fleaman" parent="Level5_1" instance=ExtResource( 5 )]
position = Vector2( 161, 392 )
hopFirst = true

[node name="CollisionShape2D" parent="Level5_1/Fleaman/SimonDetector" index="0"]
shape = SubResource( 3 )

[node name="Fleaman2" parent="Level5_1" instance=ExtResource( 5 )]
position = Vector2( 224, 392 )
hopFirst = true

[node name="CollisionShape2D" parent="Level5_1/Fleaman2/SimonDetector" index="0"]
shape = SubResource( 4 )

[node name="Skeleton" parent="Level5_1" instance=ExtResource( 6 )]
position = Vector2( 273, 288 )

[node name="Skeleton2" parent="Level5_1" instance=ExtResource( 6 )]
position = Vector2( 361, 383 )

[node name="Skeleton3" parent="Level5_1" instance=ExtResource( 6 )]
position = Vector2( 118, 96 )

[node name="Skeleton4" parent="Level5_1" instance=ExtResource( 6 )]
position = Vector2( 172, 32 )

[node name="RedSkeleton" parent="Level5_1" instance=ExtResource( 13 )]
position = Vector2( 557, 128 )
direction = -1

[node name="RedSkeleton2" parent="Level5_1" instance=ExtResource( 13 )]
position = Vector2( 800, 128 )
startDown = true
direction = -1

[node name="Fleaman3" parent="Level5_1" instance=ExtResource( 5 )]
position = Vector2( 671, 136 )
hopFirst = true

[node name="Fleaman4" parent="Level5_1" instance=ExtResource( 5 )]
position = Vector2( 735, 136 )
hopFirst = true

[node name="Fleaman5" parent="Level5_1" instance=ExtResource( 5 )]
position = Vector2( 1024, 136 )
hopFirst = true

[node name="HiddenTreasure" parent="Level5_1" instance=ExtResource( 9 )]
position = Vector2( 360, 152 )

[node name="Treasure" parent="Level5_1/HiddenTreasure" instance=ExtResource( 7 )]

[node name="Sprite" type="Sprite" parent="Level5_1/HiddenTreasure"]
texture = ExtResource( 8 )

[node name="SecretSpawner" type="Area2D" parent="Level5_1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level5_1/SecretSpawner"]
position = Vector2( 415, 32 )
shape = SubResource( 5 )

[node name="Destructible" parent="Level5_1" instance=ExtResource( 12 )]
position = Vector2( 440, 56 )
drop = "doubleortriple"
texture = ExtResource( 8 )

[node name="Destructible2" parent="Level5_1" instance=ExtResource( 12 )]
position = Vector2( 1096, 120 )
drop = "porkchop"
texture = ExtResource( 8 )

[node name="SimonSpawn" type="Position2D" parent="."]
position = Vector2( 39, 144 )

[node name="GoDown1" parent="." instance=ExtResource( 11 )]
position = Vector2( 104, -71 )
destinationNode = NodePath("../GoUp1")

[node name="GoUp1" parent="." instance=ExtResource( 11 )]
position = Vector2( 72, -8 )
destinationNode = NodePath("../GoDown1")
newCameraY = -192
direction = 1

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -256 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 1280, -256 )

[editable path="Level5_1/Fleaman"]
[editable path="Level5_1/Fleaman2"]
